--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -16,17 +16,22 @@ body {
   height: 100%;
 }
 
+
 .navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 999; /* Set the z-index to a value that ensures the navbar appears above other elements */
   height: 100px;
   background-image: linear-gradient(180deg, #000, rgba(0, 0, 0, 0.8) 59%, transparent);
-  position: relative;
 }
 
 .logo {
 }
 
 #logoPic {
-  height: 40px;
+  height: 38px;
   padding-left: 5px;
 }
 
@@ -35,8 +40,8 @@ body {
 }
 
 #hamPic {
-  width: 57px;
-  height: 57px;
+  width: 40px;
+  height: 40px;
 }
 
 .nav-elements {
