--- a/src/components/Intro.css
+++ b/src/components/Intro.css
@@ -3,12 +3,13 @@
     color: white;
     background-color: black;
     margin: 0;
-    width: 100%;
+    width: calc(100% - 20%);
     position: absolute;
-    top: calc(100px + 70px);
+    top: calc(100px);
     left: 0px;
     right: 0px;
-    padding: 0px;
+    padding: 20px 10%;
+    padding-top: 0;
     font-size: 50px;
     min-height: 700px;
 
@@ -21,8 +22,6 @@
 }
 
 #nameCont {
-    min-width: calc(50% - 13%);
-    padding-left: 13%;
     max-width: 100vw;
 }
 
@@ -52,13 +51,14 @@
 
 #picCont {
     max-width: 100vw;
-    min-width: calc(50% - 13%);
-    padding-right: 13%;
 }
 
 #headshot {
-    height: 698px;
-    max-height: 100vw;
+    height: calc(100vw - 50px);
+    max-height: 600px;
+    aspect-ratio: 1/1;
     background-color: black;
     float: right;
+    filter: grayscale(60%);
+    padding: 25px;
 }
