--- a/src/components/Intro.css
+++ b/src/components/Intro.css
@@ -25,18 +25,15 @@
     max-width: 100vw;
 }
 
-#hello {
+.hello {
     font-size: 28px;
-    font-weight: 700;
-}
-
-#name {
-    font-size: 70px;
     font-weight: 700;
 }
 
 .name {
     font-size: 70px;
+    font-weight: 700;
+    margin-bottom: 50px;
 }
 
 #dot {
@@ -59,6 +56,9 @@
     aspect-ratio: 1/1;
     background-color: black;
     float: right;
-    filter: grayscale(60%);
+    filter: grayscale(0%);
     padding: 25px;
 }
+
+
+/*Typewriter Effect Start*/
