--- a/src/App.css
+++ b/src/App.css
@@ -22,9 +22,9 @@
 .button {
   color: rgb(255, 255, 255, 0.86);
   font-size: 11px;
-  font-weight: 600;
+  font-weight: bold;
   text-align: left;
-  letter-spacing: 4px;
+  letter-spacing: 3px;
   background-color: transparent;
   padding: 12px 15px 12px 0px;
   border: 0;
