--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -19,12 +19,9 @@ body {
   top: 0;
   left: 0;
   width: 100%;
-  z-index: 999; /* Set the z-index to a value that ensures the navbar appears above other elements */
+  z-index: 998; /* Set the z-index to a value that ensures the navbar appears above other elements */
   height: 100px;
   background-image: linear-gradient(180deg, #000, rgba(0, 0, 0, 0.8) 59%, transparent);
-}
-
-.logo {
 }
 
 #logoPic {
@@ -39,6 +36,10 @@ body {
 #hamPic {
   width: 40px;
   height: 40px;
+}
+
+.nav-elements ul li:hover{
+  cursor: pointer;
 }
 
 .nav-elements ul {
