--- a/src/pages/PageNotFound.css
+++ b/src/pages/PageNotFound.css
@@ -9,7 +9,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 100vw;
+    width: 100%;
     height: 125px;
     z-index: 1000;
     background-color: black;
