--- a/src/App.css
+++ b/src/App.css
@@ -40,8 +40,15 @@
 
 .section {
   margin: 0;
-  width: calc(100% - 20%);
-  padding: 5vh 10%;
+  width: calc(100% - 10%);
+  padding: 8vh 5%;
+}
+
+@media (max-width: 1500px) {
+  .section {
+    width: 95%;
+    padding: 5vh 2.5%;
+  }
 }
 
 .sectionFlexSimple  {
@@ -65,7 +72,6 @@
   position: relative;
   overflow: hidden;
   width: 100%;
-  max-width: 700px;
   padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
   margin: 40px 0;
 }
