--- a/src/components/DigitalScholars.css
+++ b/src/components/DigitalScholars.css
@@ -2,7 +2,6 @@
     padding-top: 7vh;
     justify-content: center;
     margin: 0;
-    width: 100%;
 }
 
 #DSTitleCont {
@@ -16,7 +15,7 @@
 }
 
 #DSDesc {
-    max-width: 70ch;
+    max-width: 60ch;
 }
 
 @media (max-width: 1434px) {
@@ -31,7 +30,7 @@
     }
     #DSVidDesc {
         display: flex;
-        flex-flow: column-reverse nowrap;
+        flex-flow: column nowrap;
         justify-content: space-evenly;
         align-items: center;
     }
