--- a/src/components/Intro.css
+++ b/src/components/Intro.css
@@ -11,6 +11,12 @@
     }
 }
 
+@media (min-height: 875px) {
+    #Intro {
+        padding-top: 150px;
+    }
+}
+
 #nameCont {
     max-width: 100vw;
 }
