--- a/src/components/Programming.css
+++ b/src/components/Programming.css
@@ -2,12 +2,17 @@
     font-size: 60px;
     text-align: center;
     margin-top: 25px;
+    margin-bottom: 30px;
 }
 
 @media (max-width: 630px) {
     #ProgTitle {
         font-size: 50px;
     }
+}
+
+#githubBtn {
+    margin-bottom: 10px;
 }
 
 #skillsBox {
