--- a/src/components/subcomponents/Card.css
+++ b/src/components/subcomponents/Card.css
@@ -14,7 +14,7 @@
     height: calc(100% - 25px);
     width: calc(100% - 25px);
     z-index: 1;
-    background-color: rgba(0, 0, 0, 0.7);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.8));
 
     opacity: 1; /* Initially hide the overlay */
     display: flex;
@@ -26,14 +26,14 @@
     padding-bottom: 25px;
     padding-left: 25px;
 
-    transition-duration: 0.4s;
+    transition-duration: 0.5s;
 }
 
 /* Show overlay on hover */
-#overlay:hover {
-    opacity: 1;
+#overlay:hover{
+    background-color: rgba(0, 0, 0, 0.45);
+    padding-left: 40px;
 }
-
 
 #orgPos {
     font-size: 18px;
