--- a/src/index.css
+++ b/src/index.css
@@ -34,3 +34,10 @@ code {
   font-weight: normal;
   font-style: normal;
 }
+
+/* index.css */
+@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&display=swap');
+
+body {
+  font-family: 'Cinzel', serif;
+}
